--- a/src/app/features/main/main.component.html
+++ b/src/app/features/main/main.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
 
-<p>main works!</p>
+<app-accesspoint-map [accessPointObservable]="accessPointsObservable"></app-accesspoint-map>
