--- a/src/app/shared/accesspoint-map/accesspoint-map.component.css
+++ b/src/app/shared/accesspoint-map/accesspoint-map.component.css
@@ -5,3 +5,12 @@
     width: 100%;
     height: 100%;
 }
+
+.apm-ol-map-filter {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+    background-color: red;
+}
