--- a/src/app/shared/accesspoint-details/accesspoint-details.component.html
+++ b/src/app/shared/accesspoint-details/accesspoint-details.component.html
@@ -6,30 +6,39 @@
             </div>
         </div>
  
-        <div *ngIf="selectedAccessPoint !== undefined" class="row justify-content-center">
+        <div *ngIf="__selectedAccessPoint !== undefined" class="row justify-content-center">
             <div class="col-lg-12 col-md-12 text-center">           
                 <div *ngIf="singleAccessPoint; else multipleIds">
-                    <h3>{{ selectedAccessPoint.ssid }}</h3>
+                    <h3>{{ __selectedAccessPoint.ssid }}</h3>
                 </div>       
                 
                 <ng-template #multipleIds>
                     <p class="my-0">Several access points at this location, select which you want to see:</p>
-                    <select class="form-select my-0" [(ngModel)]="selectedAccessPointId" (ngModelChange)="selectedAccessPointChanged($event)">
-                        <option *ngFor="let ap of accessPointsIds" [value]="ap">{{ ap }}</option>
-                    </select>   
-                </ng-template>
-
-                <div *ngIf="selectedAccessPoint.stamps.length; else noStamps">
-                    <p class="my-0">Select the stamp (snapshoot) of the currently selected access point:</p>
-                    <select class="form-select my-0" [(ngModel)]="selectedAccessPointStamp" (ngModelChange)="selectedAccessPointStampChanged($event)">
-                        <option *ngFor="let stamp of selectedAccessPoint.stamps" [value]="stamp">{{ stamp.id }}</option>
-                    </select>
-                </div>
-
-                <ng-template #noStamps>
-                    <p class="my-0">This access point has not stamps.</p>
+                    <form [formGroup]="accessPointSelectionForm">
+                        <select class="form-select my-0" formControlName="selectedAccessPointId">
+                            <option *ngFor="let ap of accessPoints" [value]="ap.id">{{ ap.ssid }}</option>
+                        </select>
+                    </form>   
                 </ng-template>
             </div>
+        </div>
+
+        <div *ngIf="__selectedAccessPoint !== undefined" class="row justify-content-center">
+            <div *ngIf="__selectedAccessPoint.stamps.length === 0; else stampsPresent" class="col-lg-12 col-md-12 text-center">
+                <p class="my-0">This access point has not stamps.</p>
+            </div>
+
+            <ng-template #stampsPresent>
+                <p class="my-0">Several access point snapshoots available to compare:</p>
+                <form [formGroup]="accessPointStampSelectionForm">
+                    <div>
+                        <select class="form-select my-0" formControlName="selectedStampId">
+                            <option [value]="this._emptyStampSelection">Merged master</option>
+                            <option *ngFor="let stamp of __selectedAccessPoint.stamps" [value]="stamp.id">{{ stamp.creationTimestamp }}</option>
+                        </select>
+                    </div>
+                </form>
+            </ng-template>   
         </div>
 
         <div class="row justify-content-center">
@@ -38,30 +47,40 @@
             </div>
         </div>
 
-        <div *ngIf="selectedAccessPoint !== undefined" class="row justify-content-center">         
-            <div>
-                <!-- Checkout to toggle between merged data and stamp -->
-            </div>
-
+        <div *ngIf="__selectedAccessPoint !== undefined" class="row justify-content-center">
             <div class="col-lg-12 col-md-12">
-                <h4>BSSID: {{ selectedAccessPoint.bssid }}</h4>
-                <h5>Manufacturer: {{ selectedAccessPoint.manufacturer }}</h5>
-                <h5>Device type: {{ selectedAccessPoint.deviceType }}</h5>
-                <h5>Signal area: {{ selectedAccessPoint.signalArea }}m<sup>2</sup></h5>
-                <h5>Frequency: {{ selectedAccessPoint.frequency }}</h5>
-                <h5>Security: <span [style.color]="getSecurityColor()">{{ getSecurityText() }}</span></h5>
-                <h5>Available encryption types: {{ selectedAccessPoint.serializedSecurityPayload }}</h5>
-                <h5>First seen: {{ selectedAccessPoint.creationTimestamp }}</h5>
-                <h5>State from: {{ selectedAccessPoint.versionTimestamp }}</h5>
-                <h5 *ngIf="hasAdminPermission">Display status: {{ (selectedAccessPoint.displayStatus) ? "Public" : "Hidden" }}</h5>
+                <h4>BSSID: {{ __selectedAccessPoint.bssid }}</h4>
+                <h5>Manufacturer: {{ __selectedAccessPoint.manufacturer }}</h5>
+                <h5>Device type: {{ currentSelectedAcccessPointSnapshoot.deviceType }}</h5>
+                <h5>Signal area: {{ currentSelectedAcccessPointSnapshoot.signalArea }}m<sup>2</sup></h5>
+                <h5>Frequency: {{ currentSelectedAcccessPointSnapshoot.frequency }}</h5>
+                <h5>Security: <span [style.color]="getSecurityColor(currentSelectedAcccessPointSnapshoot)">{{ getSecurityText(currentSelectedAcccessPointSnapshoot) }}</span></h5>
+                <h5>Available encryption types: {{ currentSelectedAcccessPointSnapshoot.serializedSecurityPayload }}</h5>
+
+                <div *ngIf="__selectedAccessPointStamp === undefined; else dataForStamp">
+                    <h5>First seen: {{ __selectedAccessPoint.creationTimestamp }}</h5>
+                    <h5>State from: {{ __selectedAccessPoint.versionTimestamp }}</h5>
+                    <h5 *ngIf="hasAdminPermission">Display status: {{ (__selectedAccessPoint.displayStatus) ? "Public" : "Hidden" }}</h5>   
+                </div>
+
+                <ng-template #dataForStamp>
+                    <h5>Created on: {{ __selectedAccessPointStamp.creationTimestamp }}</h5>
+                    <h5>Stamp merge status: {{ (__selectedAccessPointStamp.status) ? "Merged" : "Pending" }}</h5> 
+                </ng-template>
             </div>
 
             <div *ngIf="hasAdminPermission" class="row justify-content-center text-center">
                 <div class="col-lg-2 col-md-12">
-                    <button type="button" class="btn btn-secondary mx-1 col-12" (click)="updateAccessPointDisplayStatus()">{{ (selectedAccessPoint.displayStatus) ? "Hide" : "Show" }}</button>
+                    <button type="button" class="btn btn-secondary mx-1 col-12" [disabled]="__selectedAccessPointStamp !== undefined" (click)="updateAccessPointDisplayStatus()">{{ (__selectedAccessPoint.displayStatus) ? "Hide" : "Show" }}</button>
                 </div>
                 <div class="col-lg-2 col-md-12">
-                    <button type="button" class="btn btn-secondary mx-1 col-12" (click)="deleteAccessPoint()">Delete</button> 
+                    <button type="button" class="btn btn-secondary mx-1 col-12" [disabled]="__selectedAccessPointStamp !== undefined" (click)="deleteAccessPoint()">Delete</button> 
+                </div>
+                <div class="col-lg-2 col-md12">
+                    <button type="button" class="btn btn-secondary mx-1 col-12" [disabled]="__selectedAccessPointStamp === undefined" (click)="deleteAccessPointStamp()">Delete stamp</button>
+                </div>
+                <div class="col-lg-2 col-md12">
+                    <button type="button" class="btn btn-secondary mx-1 col-12" [disabled]="__selectedAccessPointStamp === undefined" (click)="mergeAccessPointStamp()">Merge stamp</button>
                 </div>
             </div>
         </div>
