--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/statistics">Statistics</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/upload">Upload</a>
+                </li>
                 <li>
                     <a class="nav-link" (click)="logout()"><b>Logout</b></a>
                 </li>
