Authentication page styling

--- a/src/app/features/login/register-modal/register-modal.component.html
+++ b/src/app/features/login/register-modal/register-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-container text-center">
-    <h2>AccessPointMap registration</h2>
+    <h3>Registration</h3>
     <p>After successful registration you will have to wait for your account to be approved by the administration.</p>
 
     <app-alert [type]="notificationType" [text]="notificationText" [show]="notificationShow"></app-alert>
