--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid">
     <div class="row justify-content-center" style="margin-top: 25vh;">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-5 col-md-12">
             <div class="form-container">
                 <div class="row justify-content-center px-3 py-3">
-                    <div class="col-8">
-                        <h1 class="text-center">Sign in</h1>
+                    <div class="col-10">
+                        <h2 class="title text-center">AccessPointLab</h2>
                         <form class="mt-3" [formGroup]="loginForm" (ngSubmit)="loginSubmit()">
                             <div class="mb-2">
-                                <input type="text" class="form-control" id="server" placeholder="Server" formControlName="server" aria-describedby="Server">
+                                <input type="text" class="form-control" id="server" placeholder="Server..." formControlName="server" aria-describedby="Server">
                             </div>
                             <div class="mb-2">
-                                <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" aria-describedby="Email">
+                                <input type="email" class="form-control" id="email" placeholder="Email..." formControlName="email" aria-describedby="Email">
                             </div>
                             <div class="mb-2">
-                                <input type="password" class="form-control" id="password" placeholder="password" formControlName="password" aria-describedby="Password">
+                                <input type="password" class="form-control" id="password" placeholder="Password..." formControlName="password" aria-describedby="Password">
                             </div>
                             <button type="submit" class="btn btn-primary col-12 mt-3">Sign in</button>
                         </form>
