--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark navbar-floating-index">
+<nav [ngClass]="animatedBackground ? 'navbar-animated' : ''" class="navbar navbar-expand-lg sticky-top">
     <div class="container-fluid">
-        <a routerLink="/" class="navbar-brand">AccessPointMap {{ getServerName() }}</a>
+        <a routerLink="/" class="navbar-brand">AccessPointMap (Server: {{ getServerName() }})</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
