--- a/src/app/shared/accesspoint-map/accesspoint-map.component.css
+++ b/src/app/shared/accesspoint-map/accesspoint-map.component.css
@@ -12,5 +12,15 @@
     left: 0;
     height: auto;
     width: 100%;
-    background-color: red;
+    background-image: linear-gradient(135deg, var(--apm-primary), var(--apm-accent)) !important;
+    transition: .2s opacity ease-in-out !important;
+    opacity: 50%;
+}
+
+.apm-ol-map-filter:hover {
+    opacity: 100%;
+}
+
+input[type=text] {
+    background-color: var(--apm-light) !important;
 }
