--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
     --apm-dark: #000;
     --apm-primary-fade: rgba(95,10,135,.5);
     --apm-accent-fade: rgba(164,80,139,.5);
+    --apm-encryption-good: #68BC00;
+    --apm-encryption-medium: #F39D2B;
+    --apm-encryption-bad: #D33115;
+    --apm-encryption-alt: #009CE1;
 }
 
 /* Google font */
@@ -91,4 +95,14 @@ select:focus {
 
 .modal-content {
     border-radius: 2em !important;
+}
+
+/* Custom ngx-pagination menu */
+.ngx-pagination {
+    color: var(--apm-accent) !important;
+}
+
+.ngx-pagination .current {
+    color: var(--apm-light) !important;
+    background-color: var(--apm-primary) !important;
 }
