--- a/src/app/features/upload/upload.component.html
+++ b/src/app/features/upload/upload.component.html
@@ -1,37 +1,46 @@
 <app-navbar></app-navbar>
 
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-12">
-            <h2>Default</h2>
-            <form [formGroup]="defaultUploadForm" (ngSubmit)="submitUploadDefault()">
-                <div>
-                    <input class="form-control" type="file" (change)="assignFileToControlOnChange($event, defaultUploadForm)">
-                </div>
-                <button type="submit" class="btn btn-secondary col-12 mt-3">Upload</button> 
-            </form>
+<div class="container-fluid mt-4">
+    <div class="row justify-content-center my-4">
+        <div class="col-lg-5 col-md-12">
+            <div class="upload-section">
+                <h2>Default</h2>
+                <p>Data in JSON format provided by the AccessPointMap scanner mobile application. The application is not currently being developed, but the data collected with its help is still compatible with the AccessPointMap platform.</p>
+                <form [formGroup]="defaultUploadForm" (ngSubmit)="submitUploadDefault()">
+                    <div>
+                        <input class="form-control" type="file" (change)="assignFileToControlOnChange($event, defaultUploadForm)">
+                    </div>
+                    <button type="submit" class="btn btn-primary col-12 mt-3">Upload</button> 
+                </form>
+            </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-12">
-            <h2>WiGLE</h2>
-            <form [formGroup]="wigleUploadForm" (ngSubmit)="submitUploadWigle()">
-                <div>
-                    <input class="form-control" type="file" (change)="assignFileToControlOnChange($event, wigleUploadForm)">
-                </div>
-                <button type="submit" class="btn btn-secondary col-12 mt-3">Upload</button> 
-            </form>
+    <div class="row justify-content-center my-4">
+        <div class="col-lg-5 col-md-12">
+            <div class="upload-section">
+                <h2>WiGLE</h2>
+                <p>Data in CSV format provided by the WiGLE Wifi mobile application. It is an application of the biggest war-driving platform. The application is very convenient to use.</p>
+                <form [formGroup]="wigleUploadForm" (ngSubmit)="submitUploadWigle()">
+                    <div>
+                        <input class="form-control" type="file" (change)="assignFileToControlOnChange($event, wigleUploadForm)">
+                    </div>
+                    <button type="submit" class="btn btn-primary col-12 mt-3">Upload</button> 
+                </form>
+            </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-12">
-            <h2>Aircrack-ng</h2>
-            <form [formGroup]="aircrackngUploadForm" (ngSubmit)="submitUploadAircrackng()">
-                <div>
-                    <input class="form-control" type="file" (change)="assignFileToControlOnChange($event, aircrackngUploadForm)">
-                </div>
-                <button type="submit" class="btn btn-secondary col-12 mt-3">Upload</button> 
-            </form>
+    <div class="row justify-content-center my-4">
+        <div class="col-lg-5 col-md-12">
+            <div class="upload-section">
+                <h2>Aircrack-ng</h2>
+                <p>Data in CSV format provided by the program airodump-ng (Aircrack-ng platform). It is a powerful wireless network audit platform. The collection data is very accurate and detailed.</p>
+                <form [formGroup]="aircrackngUploadForm" (ngSubmit)="submitUploadAircrackng()">
+                    <div>
+                        <input class="form-control" type="file" (change)="assignFileToControlOnChange($event, aircrackngUploadForm)">
+                    </div>
+                    <button type="submit" class="btn btn-primary col-12 mt-3">Upload</button> 
+                </form>
+            </div>
         </div>
     </div>
 </div>
