Details vector swap bug fix and styles

--- a/src/app/shared/accesspoint-details/accesspoint-details.component.css
+++ b/src/app/shared/accesspoint-details/accesspoint-details.component.css
@@ -1,3 +1,17 @@
 .apm-ol-detail-map {
     height: 45vh;
+    border: 1px solid var(--apm-primary);
+}
+
+.property-name, h3, h4 {
+    color: var(--apm-primary);
+}
+
+label, h5, b {
+    color: var(--apm-accent);
+}
+
+h5 {
+    margin-top: .6em;
+    margin-bottom: .6em;
 }
