--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,17 @@ input[type=file]::file-selector-button, input[type=file]::file-selector-button:h
     cursor: pointer !important;
 }
 
+input[type="checkbox"],
+input[type="checkbox"]:focus,
+input[type="checkbox"]:checked {
+    border: 1px solid var(--apm-primary) !important;
+    box-shadow: none !important;
+}
+
+input[type="checkbox"]:checked {
+    background-color: var(--apm-primary) !important;
+}
+
 /* Button */
 .btn-primary {
     font-family: 'Montserrat', sans-serif !important;
@@ -106,6 +117,10 @@ select:focus {
 
 .modal-content {
     border-radius: 2em !important;
+}
+
+.btn-close:focus {
+    box-shadow: none !important;
 }
 
 /* Custom ngx-pagination menu */
