--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,30 +1,32 @@
-<div class="container-fluid">
-    <div class="row justify-content-center" style="margin-top: 25vh;">
-        <div class="col-lg-5 col-md-12">
-            <div class="form-container">
-                <div class="row justify-content-center px-3 py-3">
-                    <div class="col-10">
-                        <h2 class="title text-center">AccessPointLab</h2>
-                        <form class="mt-3" [formGroup]="loginForm" (ngSubmit)="loginSubmit()">
-                            <div class="mb-2">
-                                <input type="text" class="form-control" id="server" placeholder="Server..." formControlName="server" aria-describedby="Server">
+<div class="login-content-container">
+    <div class="container-fluid">
+        <div class="row justify-content-center login-row">
+            <div class="col-lg-5 col-md-12">
+                <div class="form-container">
+                    <div class="row justify-content-center px-3 py-3">
+                        <div class="col-10">
+                            <h2 class="title text-center">AccessPointLab</h2>
+                            <form class="mt-3" [formGroup]="loginForm" (ngSubmit)="loginSubmit()">
+                                <div class="mb-2">
+                                    <input type="text" class="form-control" id="server" placeholder="Server..." formControlName="server" aria-describedby="Server">
+                                </div>
+                                <div class="mb-2">
+                                    <input type="email" class="form-control" id="email" placeholder="Email..." formControlName="email" aria-describedby="Email">
+                                </div>
+                                <div class="mb-2">
+                                    <input type="password" class="form-control" id="password" placeholder="Password..." formControlName="password" aria-describedby="Password">
+                                </div>
+                                <button type="submit" class="btn btn-primary col-12 mt-3">Sign in</button>
+                            </form>
+                            
+                            <div class="text-center mt-3">
+                                <a (click)="register()" class="register">Join the project!</a>
                             </div>
-                            <div class="mb-2">
-                                <input type="email" class="form-control" id="email" placeholder="Email..." formControlName="email" aria-describedby="Email">
-                            </div>
-                            <div class="mb-2">
-                                <input type="password" class="form-control" id="password" placeholder="Password..." formControlName="password" aria-describedby="Password">
-                            </div>
-                            <button type="submit" class="btn btn-primary col-12 mt-3">Sign in</button>
-                        </form>
-                        
-                        <div class="text-center mt-3">
-                            <a (click)="register()" class="register">Join the project!</a>
+    
+                            <div class="mt-3">
+                                <app-alert [type]="notificationType" [text]="notificationText" [show]="notificationShow"></app-alert>
+                            </div>   
                         </div>
-
-                        <div class="mt-3">
-                            <app-alert [type]="notificationType" [text]="notificationText" [show]="notificationShow"></app-alert>
-                        </div>   
                     </div>
                 </div>
             </div>
