--- a/src/app/shared/accesspoint-map/accesspoint-map.component.html
+++ b/src/app/shared/accesspoint-map/accesspoint-map.component.html
@@ -1,20 +1,3 @@
 <div class="apm-ol-map" [id]="mapId"></div>
 
-<div class="apm-ol-map-filter">
-    <div class="container-fluid">
-        <div class="row justify-content-center my-3 px-5">
-            <div class="col-lg-5 col-md-12 px-5">
-                <form [formGroup]="keywordFilterForm">
-                    <input type="text" class="form-control" id="keyword-form-control" placeholder="Filter by keyword..." formControlName="keyword">
-                </form>
-            </div>
-            <div class="col-lg-5 col-md-12 px-5">
-                <form [formGroup]="encryptionTypeFilterForm">
-                    <select class="form-select" formControlName="selectedEncryption">
-                        <option *ngFor="let type of encryptionTypesArray" [value]="type">{{ type }}</option>
-                    </select>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<app-accesspoint-map-filter (filterChangedEvent)="filterValuesChanged($event)"></app-accesspoint-map-filter>
