Style fix for datepicker

--- a/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.css
+++ b/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.css
@@ -19,6 +19,7 @@
     color: var(--apm-light) !important;
 }
 
-input[type=text] {
+input[type=text],
+.datapicker-control {
     background-color: var(--apm-light) !important;
 }
