Uploading feature implementation

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/upload">Upload</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/download">Download</a>
+                </li>
                 <li>
                     <a class="nav-link" (click)="logout()"><b>Logout</b></a>
                 </li>
