Basic navigation and animation implementation

--- a/src/app/shared/accesspoint-details-v2/accesspoint-details-v2.component.css
+++ b/src/app/shared/accesspoint-details-v2/accesspoint-details-v2.component.css
@@ -7,6 +7,10 @@
     color: var(--apm-primary) !important;
 }
 
+.nav-item {
+    cursor: pointer;
+}
+
 .nav-link {
     color: var(--apm-accent) !important;
 }
